@@ -2,15 +2,13 @@ package org.jabref.http.server;
 
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import javafx.collections.FXCollections;
-
+import org.jabref.http.dto.GlobalExceptionMapper;
 import org.jabref.http.dto.GsonFactory;
+import org.jabref.http.server.services.FilesToServe;
 import org.jabref.logic.bibtex.FieldPreferences;
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.preferences.CliPreferences;
-import org.jabref.logic.preferences.LastFilesOpenedPreferences;
 import org.jabref.model.entry.BibEntryPreferences;
 
 import com.google.gson.Gson;
@@ -18,6 +16,7 @@ import org.glassfish.hk2.utilities.binding.AbstractBinder;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.test.JerseyTest;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.slf4j.bridge.SLF4JBridgeHandler;
 
 import static org.mockito.Mockito.mock;
@@ -34,7 +33,8 @@ import static org.mockito.Mockito.when;
 abstract class ServerTest extends JerseyTest {
 
     private static CliPreferences preferences;
-    private static LastFilesOpenedPreferences lastFilesOpenedPreferences;
+
+    private static final FilesToServe FILES_TO_SERVE = new FilesToServe();
 
     @BeforeAll
     static void installLoggingBridge() {
@@ -43,6 +43,21 @@ abstract class ServerTest extends JerseyTest {
         SLF4JBridgeHandler.install();
 
         initializePreferencesService();
+    }
+
+    @BeforeEach
+    public void setUp() throws Exception {
+        super.setUp();
+        FILES_TO_SERVE.setFilesToServe(List.of(TestBibFile.GENERAL_SERVER_TEST.path));
+    }
+
+    protected void addFilesToServeToResourceConfig(ResourceConfig resourceConfig) {
+        resourceConfig.register(new AbstractBinder() {
+            @Override
+            protected void configure() {
+                bind(FILES_TO_SERVE).to(FilesToServe.class);
+            }
+        });
     }
 
     protected void addGsonToResourceConfig(ResourceConfig resourceConfig) {
@@ -64,11 +79,7 @@ abstract class ServerTest extends JerseyTest {
     }
 
     protected void setAvailableLibraries(EnumSet<TestBibFile> files) {
-        when(lastFilesOpenedPreferences.getLastFilesOpened()).thenReturn(
-                FXCollections.observableArrayList(
-                        files.stream()
-                             .map(file -> file.path)
-                             .collect(Collectors.toList())));
+        FILES_TO_SERVE.setFilesToServe(files.stream().map(file -> file.path).toList());
     }
 
     private static void initializePreferencesService() {
@@ -89,10 +100,9 @@ abstract class ServerTest extends JerseyTest {
         FieldPreferences fieldContentFormatterPreferences = new FieldPreferences(false, List.of(), List.of());
         // used twice, once for reading and once for writing
         when(importFormatPreferences.fieldPreferences()).thenReturn(fieldContentFormatterPreferences);
+    }
 
-        lastFilesOpenedPreferences = mock(LastFilesOpenedPreferences.class);
-        when(preferences.getLastFilesOpenedPreferences()).thenReturn(lastFilesOpenedPreferences);
-
-        when(lastFilesOpenedPreferences.getLastFilesOpened()).thenReturn(FXCollections.observableArrayList(TestBibFile.GENERAL_SERVER_TEST.path));
+    protected void addGlobalExceptionMapperToResourceConfig(ResourceConfig resourceConfig) {
+        resourceConfig.register(GlobalExceptionMapper.class);
     }
 }
